--- a/flask-chart/templates/serviceaccount.yaml
+++ b/flask-chart/templates/serviceaccount.yaml
@@ -5,9 +5,11 @@ metadata:
   name: {{ include "flask-chart.serviceAccountName" . }}
   labels:
     {{- include "flask-chart.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+{{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
-  {{- end }}
-automount: {{ .Values.serviceAccount.automount }}
-{{- end -}}
+{{- end }}
+{{- if .Values.serviceAccount.automountServiceAccountToken }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+{{- end }}
+{{- end }}
